@@ -350,6 +350,19 @@ the measure into that many equal sized chunks, and then shuffles
 the chunks.  Sometimes dividing a measure up into 4 equal size
 chunks and then scrambling those chunks can give interesting
 results.
+<h3><b>Add space before</b> and <b>Add space after</b></h3>
+These two buttons allow you to add extra space at the beginning
+and the ending of the measure, respectively.  Suppose you're
+composing some drum beat to go along with some guitar part
+and you find out that it needs to be a bit longer.  Say
+instead of the 16 equal sized chunks, you wanted 19
+equal sized chunks.  So you want to add 3/19 more
+space onto the end.  Set the numerator to 3, the
+denominator to 19, and click "Add space after."
+The notes are all shoved over to the left proportionally,
+leaving you an extra 3/19's of a measure of blank space.
+You can then adjust the grid lines to match your new
+spacing.
 
 <h2>Using Gneutronica with softsynths such as fluidsynth</h2>
 Using alsa-virmidi, you can uee softsynths.
