@@ -236,6 +236,11 @@ GLOBAL GtkWidget *remap_drumkit_button;
 GLOBAL GtkWidget *automag;
 GLOBAL GtkWidget *autocrunch;
 
+GLOBAL GtkWidget *add_space_before_button;
+GLOBAL GtkWidget *add_space_numerator_spin;
+GLOBAL GtkWidget *add_space_denominator_spin;
+GLOBAL GtkWidget *add_space_after_button;
+
 GLOBAL GtkWidget *TempoChWin;
 GLOBAL GtkWidget *TempoChvbox1;
 GLOBAL GtkWidget *TempoChhbox1;
